# purescript-gjs

./: .gitattributes  Makefile  README.md  default.nix  flake.nix  spago.dhall  spago.yaml
codegen/: PureGirGen.hs  README.md  codegen.cabal  default.nix
src/: Cairo.js  Cairo.purs  ExtensionUtils.js  ExtensionUtils.purs  GJS.js  GJS.purs  GLib.js  GLib.purs  GObject.js  GObject.purs  Gtk.js  Gtk.purs  Gtk4.js  Gtk4.purs  St.js  St.purs  System.js  System.purs  schema.dhall
src/Clutter/: Actor.js  Actor.purs  ActorAlign.js  ActorAlign.purs  BoxLayout.js  BoxLayout.purs  ButtonEvent.purs  Event.js  Event.purs  EventType.purs  KeyEvent.purs  LayoutManager.purs  Orientation.purs  Stage.js  Stage.purs
src/GLib/: DateTime.js  DateTime.purs  MainLoop.js  MainLoop.purs  TimeSpan.purs  Variant.js  Variant.purs  VariantType.purs
src/Gio/: Async.js  Async.purs  AsyncReadyCallback.purs  AsyncResult.purs  BusType.js  BusType.purs  Cancellable.js  Cancellable.purs  DBusCallFlags.js  DBusCallFlags.purs  DBusConnection.js  DBusConnection.purs  DBusProxy.js  DBusProxy.purs  DBusProxyFlags.js  DBusProxyFlags.purs  DBusSignalFlags.js  DBusSignalFlags.purs  File.purs  Icon.js  Icon.purs  Settings.js  Settings.purs  SettingsSchema.purs  SettingsSchemaSource.js  SettingsSchemaSource.purs  Subprocess.purs  ThemedIcon.js  ThemedIcon.purs
src/Gtk/: Box.js  Box.purs  Button.js  Button.purs  DrawingArea.js  DrawingArea.purs  Label.js  Label.purs  Widget.js  Widget.purs  Window.js  Window.purs
src/Gtk4/: Box.js  (+22 more)
test/: DBus.purs  Gio.purs  GioRaw.purs  Gtk.purs  Gtk4.purs  Main.purs
(+36 files in other folders)
